[package]
name = "nx"
version = "0.1.0"
authors = ["XorTroll", "ischeinkman <scheinkman.ilan@gmail.com>", "Switchbrew"]
links = "nx"

[lib]
crate_type = ["rlib"]

[build-dependencies]
bindgen = { version = "0.37.4", optional = true }
cc = { version = "1.0.37", optional = true }
cfg-if = "0.1"

[features]
default = []
twili = ["cc"]
